Updated the config to only generate the generated config.hpp

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -1,4 +1,4 @@
 OUTPUT_DIRECTORY	= @CMAKE_CURRENT_BINARY_DIR@/doc_doxygen/
-INPUT				= @CMAKE_CURRENT_SOURCE_DIR@/src/ @CMAKE_CURRENT_SOURCE_DIR@/docs @PROJECT_BINARY_DIR@/
+INPUT				= @CMAKE_CURRENT_SOURCE_DIR@/src/ @CMAKE_CURRENT_SOURCE_DIR@/docs @PROJECT_BINARY_DIR@/hcr_nn_config.hpp
 FILE_PATTERNS		=
 RECURSIVE			= yes
